# bazel-deps-checker

./: .bazelrc  .gitignore  BUILD  CHANGELOG.md  LICENSE  MODULE.bazel  PERF_NOTES.md  README.md  ROADMAP.md
scripts/: benchmark_cache.sh  smoke_ui.sh
src/: main.cpp
src/analysis/: CycleDetector.h
src/cli/: CommandLine.h
src/common/: pipe.h  struct.h
src/common/cli/: CommandLine.cpp  CommandLine.h
src/common/log/: logger.cpp  logger.h
src/core/analysis/: BuildTimeAnalyzer.cpp  BuildTimeAnalyzer.h  CycleDetector.cpp  CycleDetector.h  SourceAnalyzer.cpp  SourceAnalyzer.h
src/core/graph/: DependencyGraph.cpp  DependencyGraph.h
src/core/output/: OutputReport.cpp  OutputReport.h
src/core/parser/: AdvancedBazelQueryParser.cpp  AdvancedBazelQueryParser.h
src/graph/: DependencyGraph.h
src/log/: logger.cpp  logger.h
src/output/: OutputReport.h
src/parser/: AdvancedBazelQueryParser.cpp  AdvancedBazelQueryParser.h  BuildFileParser.cpp
src/runtime/: BazelAnalyzerSDK.cpp  BazelAnalyzerSDK.h  WebServer.cpp  WebServer.h  WebUiPage.cpp
src/runtime/dependency/: BuildFileDependencyer.cpp  BuildFileDependencyer.h
src/runtime/parser/: BuildFileParser.cpp  BuildFileParser.h
thirds/nlohmann/: json.hpp
